<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".ui.OperatorsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startSimpleActivity"
            android:text="@string/simple"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startContextActivity"
            android:text="@string/context"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startDelayActivity"
            android:text="@string/delay"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startDistinctActivity"
            android:text="@string/distinct"
            android:textColor="@android:color/black" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startEmitterActivity"
            android:text="@string/emitter"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startErrorsActivity"
            android:text="@string/errors"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startLimitActivity"
            android:text="@string/limit"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startMapActivity"
            android:text="Map "
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startScanReduceActivity"
            android:text="Scan Reduce"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFlatMapConcatActivity"
            android:text="Flat Map Concat"
            android:textColor="@android:color/black" />


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFlatMapMergeActivity"
            android:text="Flat Map Merge"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFlattenConcatFlowActivity"
            android:text="Flatten Concat Flow"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startMergeFlowActivity"
            android:text="Merge Flow"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFlatterMergeFlowActivity"
            android:text="Flatten Merge Flow"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startTransformLatestFlowActivity"
            android:text="Transform Latest Flow"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFlatMapLatestFlowActivity"
            android:text="Flat Map Latest Flow"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFilterActivity"
            android:text="Filter"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFilterNotActivity"
            android:text="Filter Not"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFilterIsInstanceFlowActivity"
            android:text="Filter Is Instance"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startFilterNotNullFlowActivity"
            android:text="Filter Not Null"
            android:textColor="@android:color/black" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startZipActivity"
            android:text="@string/zip"
            android:textColor="@android:color/black"
            tools:ignore="OnClick" />

    </LinearLayout>
</ScrollView>